--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^3.3.6",
     "bootstrap-slider": "^9.2.0",
     "core-js": "^2.4.1",
+    "ng2-dropdown": "0.0.13",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
@@ -38,7 +39,7 @@
     "jasmine-core": "2.4.1",
     "lite-server": "^2.2.0",
     "request": "^2.74.0",
-    "typescript": "^1.8.10",
+    "typescript": "^2.0.0",
     "typings": "^1.0.4"
   }
 }
