--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^3.3.6",
     "bootstrap-slider": "^9.2.0",
     "core-js": "^2.4.1",
+    "ng2-bootstrap": "^1.1.5",
     "ng2-charts": "^1.3.0",
     "ng2-dropdown": "0.0.13",
     "reflect-metadata": "^0.1.3",
