--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "start-prod": "http-server .\" ",
     "lite": "lite-server -c bs-config.js",
     "postinstall": "typings install",
     "tsc": "tsc",
@@ -27,6 +28,7 @@
     "bootstrap": "^3.3.6",
     "bootstrap-slider": "^9.2.0",
     "core-js": "^2.4.1",
+    "http-server": "^0.9.0",
     "ng2-bootstrap": "^1.1.5",
     "ng2-charts": "^1.3.0",
     "ng2-dropdown": "0.0.13",
