--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ng2-bootstrap": "^1.1.5",
     "ng2-charts": "^1.3.0",
     "ng2-dropdown": "0.0.13",
+    "ng2-responsive": "^0.4.6",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
