--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "core-js": "^2.4.1",
     "http-server": "^0.9.0",
     "ng2-bootstrap": "^1.1.5",
-    "ng2-charts": "^1.3.0",
+    "ng2-charts": "1.3.0",
     "ng2-dropdown": "0.0.13",
     "ng2-responsive": "^0.4.6",
     "reflect-metadata": "^0.1.3",
