--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "@angular/upgrade": "2.0.0",
     "angular2-in-memory-web-api": "0.0.15",
     "angular2-logger": "0.4.5",
+    "angular2-web-worker": "0.0.3",
     "bootstrap": "3.3.6",
     "bootstrap-slider": "9.2.0",
+    "chart.js": "2.2.2",
     "core-js": "2.4.1",
     "http-server": "0.9.0",
     "ng2-bootstrap": "1.1.14",
-    "chart.js": "2.2.2",
     "ng2-dropdown": "0.0.13",
     "ng2-responsive": "0.4.6",
     "reflect-metadata": "0.1.3",
