--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
-    "zone.js": "0.6.23"
+    "zone.js": "0.6.23",
+    "ng2-charts": "1.3.0"
   },
   "devDependencies": {
     "concurrently": "2.0.0",
