--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/upgrade": "2.0.0",
     "angular2-in-memory-web-api": "0.0.15",
     "angular2-logger": "0.4.5",
+    "angular2-modal": "^2.0.1",
     "angular2-web-worker": "0.0.3",
     "bootstrap": "3.3.6",
     "bootstrap-slider": "9.2.0",
@@ -32,13 +33,13 @@
     "core-js": "2.4.1",
     "http-server": "0.9.0",
     "ng2-bootstrap": "1.1.14",
+    "ng2-charts": "1.3.0",
     "ng2-dropdown": "0.0.13",
     "ng2-responsive": "0.4.6",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
-    "zone.js": "0.6.23",
-    "ng2-charts": "1.3.0"
+    "zone.js": "0.6.23"
   },
   "devDependencies": {
     "concurrently": "2.0.0",
