--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ng2-charts": "1.3.0",
     "ng2-dropdown": "0.0.13",
     "ng2-responsive": "0.4.6",
+    "raven-js": "^3.8.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
