--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "prod_start": "npm install --production && ng serve -prod"
+    "prod_start": "npm install --production && npm run prod_httpserver",
+    "prod_httpserver": "./node_modules/.bin/http-server ./dist -p 8079"
   },
   "private": true,
   "dependencies": {
@@ -29,28 +30,29 @@
     "bootstrap-slider": "9.2.0",
     "chart.js": "2.2.2",
     "core-js": "^2.4.1",
+    "http-server": "0.9.0",
     "ng2-bootstrap": "1.1.14",
     "ng2-responsive": "0.4.6",
     "raven-js": "3.8.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.12",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "ts-helpers": "1.1.1",
+    "zone.js": "0.6.23"
   },
   "devDependencies": {
-    "@types/bootstrap-slider": "^4.8.32",
-    "@types/google-maps": "^3.1.28",
-    "@types/jasmine": "^2.2.30",
-    "@types/node": "^6.0.42",
+    "@types/bootstrap-slider": "4.8.32",
+    "@types/google-maps": "3.1.28",
+    "@types/jasmine": "2.2.30",
+    "@types/node": "6.0.42",
     "angular-cli": "1.0.0-beta.19-3",
     "codelyzer": "1.0.0-beta.1",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
+    "karma-cli": "1.0.1",
+    "karma-jasmine": "1.0.2",
+    "karma-remap-istanbul": "0.2.1",
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
