--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.2",
     "angular2-in-memory-web-api": "0.0.15",
-    "angular2-logger": "^0.5.0",
+    "angular2-logger": "0.5.0",
     "angular2-web-worker": "0.0.3",
     "bootstrap": "3.3.7",
     "bootstrap-slider": "9.2.0",
     "chart.js": "2.2.2",
-    "core-js": "^2.4.1",
+    "core-js": "2.4.1",
     "http-server": "0.9.0",
     "ng2-bootstrap": "1.1.14",
     "ng2-responsive": "0.4.6",
@@ -49,7 +49,7 @@
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "karma-chrome-launcher": "2.0.0",
     "karma-cli": "1.0.1",
     "karma-jasmine": "1.0.2",
     "karma-remap-istanbul": "0.2.1",
