--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "GNU GPL",
   "angular-cli": {},
   "scripts": {
-    "start": "ng serve",
+    "start": "ng serve --port 8079",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
